src/objects/TR1__Job_Board_Search_Options__c.object
<CustomObject>
    <fields>
        <fullName>TR1__DiceResumeFreshness__c</fullName>
        <label>Resume Freshness</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 day</fullName>
                </value>
                <value>
                    <fullName>2 days</fullName>
                </value>
                <value>
                    <fullName>3 days</fullName>
                </value>
                <value>
                    <fullName>7 days</fullName>
                </value>
                <value>
                    <fullName>14 days</fullName>
                </value>
                <value>
                    <fullName>21 days</fullName>
                </value>
                <value>
                    <fullName>30 days</fullName>
                </value>
                <value>
                    <fullName>60 days</fullName>
                </value>
                <value>
                    <fullName>90 days</fullName>
                </value>
                <value>
                    <fullName>120 days</fullName>
                </value>
                <value>
                    <fullName>180 days</fullName>
                </value>
                <value>
                    <fullName>365 days</fullName>
                    <default>true</default>
                    <label>365 days</label>
                </value>
                <value>
                    <fullName>Passive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__DiceSchoolMatch__c</fullName>
        <label>School Match</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Match all words</fullName>
                    <default>true</default>
                    <label>Match all words</label>
                </value>
                <value>
                    <fullName>Match any words</fullName>
                </value>
                <value>
                    <fullName>Boolean</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__DiceSkillExperience1__c</fullName>
        <label>Skill Experience1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Any</fullName>
                </value>
                <value>
                    <fullName>&gt;=1</fullName>
                </value>
                <value>
                    <fullName>&gt;=2</fullName>
                </value>
                <value>
                    <fullName>&gt;=3</fullName>
                </value>
                <value>
                    <fullName>&gt;=4</fullName>
                </value>
                <value>
                    <fullName>&gt;=5</fullName>
                </value>
                <value>
                    <fullName>&gt;=6</fullName>
                </value>
                <value>
                    <fullName>&gt;=7</fullName>
                </value>
                <value>
                    <fullName>&gt;=8</fullName>
                </value>
                <value>
                    <fullName>&gt;=9</fullName>
                </value>
                <value>
                    <fullName>&gt;=10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__DiceSkillExperience2__c</fullName>
        <label>Skill Experience2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Any</fullName>
                </value>
                <value>
                    <fullName>&gt;=1</fullName>
                </value>
                <value>
                    <fullName>&gt;=2</fullName>
                </value>
                <value>
                    <fullName>&gt;=3</fullName>
                </value>
                <value>
                    <fullName>&gt;=4</fullName>
                </value>
                <value>
                    <fullName>&gt;=5</fullName>
                </value>
                <value>
                    <fullName>&gt;=6</fullName>
                </value>
                <value>
                    <fullName>&gt;=7</fullName>
                </value>
                <value>
                    <fullName>&gt;=8</fullName>
                </value>
                <value>
                    <fullName>&gt;=9</fullName>
                </value>
                <value>
                    <fullName>&gt;=10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__DiceSkillExperience3__c</fullName>
        <label>Skill Experience3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Any</fullName>
                </value>
                <value>
                    <fullName>&gt;=1</fullName>
                </value>
                <value>
                    <fullName>&gt;=2</fullName>
                </value>
                <value>
                    <fullName>&gt;=3</fullName>
                </value>
                <value>
                    <fullName>&gt;=4</fullName>
                </value>
                <value>
                    <fullName>&gt;=5</fullName>
                </value>
                <value>
                    <fullName>&gt;=6</fullName>
                </value>
                <value>
                    <fullName>&gt;=7</fullName>
                </value>
                <value>
                    <fullName>&gt;=8</fullName>
                </value>
                <value>
                    <fullName>&gt;=9</fullName>
                </value>
                <value>
                    <fullName>&gt;=10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__DiceState__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>TR1__DiceCountry__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>No Preference</fullName>
                </value>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California (North)</fullName>
                </value>
                <value>
                    <fullName>California (South)</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Distr of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__DiceTravelPreference__c</fullName>
        <label>Travel Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Preference</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Up to 25%</fullName>
                </value>
                <value>
                    <fullName>Up to 50%</fullName>
                </value>
                <value>
                    <fullName>Up to 75%</fullName>
                </value>
                <value>
                    <fullName>Up to 100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__DiceWillingToRelocateToAnywhere__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Willing To Relocate To Anywhere</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__DiceWillingToRelocateToThisState__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Willing To Relocate To This State</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__DiceWorkAuthorization__c</fullName>
        <label>Work Authorization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>U.S. Citizen</fullName>
                </value>
                <value>
                    <fullName>Canadian Citizen</fullName>
                </value>
                <value>
                    <fullName>Green Card Holder</fullName>
                </value>
                <value>
                    <fullName>Have H-1 Visa</fullName>
                </value>
                <value>
                    <fullName>Need H-1 Visa</fullName>
                </value>
                <value>
                    <fullName>TN Permit Holder</fullName>
                </value>
                <value>
                    <fullName>Employment Authorization Document</fullName>
                </value>
                <value>
                    <fullName>Authorized to work in the US</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__EFinancialCareersEmploymentType__c</fullName>
        <label>EmploymentType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Any</fullName>
                </value>
                <value>
                    <fullName>Full time</fullName>
                </value>
                <value>
                    <fullName>Part time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__EFinancialCareersIndustry__c</fullName>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting &amp;amp; Finance</fullName>
                </value>
                <value>
                    <fullName>Asset Management</fullName>
                </value>
                <value>
                    <fullName>Capital Markets</fullName>
                </value>
                <value>
                    <fullName>Commodities</fullName>
                </value>
                <value>
                    <fullName>Compliance/Legal</fullName>
                </value>
                <value>
                    <fullName>Consultancy</fullName>
                </value>
                <value>
                    <fullName>Corporate Banking</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Debt/Fixed Income</fullName>
                </value>
                <value>
                    <fullName>Derivatives</fullName>
                </value>
                <value>
                    <fullName>Equities</fullName>
                </value>
                <value>
                    <fullName>FX &amp;amp; Money Markets</fullName>
                </value>
                <value>
                    <fullName>Global Custody</fullName>
                </value>
                <value>
                    <fullName>Graduates &amp;amp; Internships</fullName>
                </value>
                <value>
                    <fullName>Hedge Funds</fullName>
                </value>
                <value>
                    <fullName>HR &amp;amp; Recruitment</fullName>
                </value>
                <value>
                    <fullName>Industry &amp;amp; Commerce</fullName>
                </value>
                <value>
                    <fullName>Information Services</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Investment Banking/M&amp;amp;A</fullName>
                </value>
                <value>
                    <fullName>Investment Consulting</fullName>
                </value>
                <value>
                    <fullName>Investor Relations &amp;amp; PR</fullName>
                </value>
                <value>
                    <fullName>Islamic Finance</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Banking &amp;amp; Wealth Management</fullName>
                </value>
                <value>
                    <fullName>Equity &amp;amp; Venture Capital</fullName>
                </value>
                <value>
                    <fullName>Public Sector</fullName>
                </value>
                <value>
                    <fullName>Quantitative Analytics</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__EFinancialCareersLanguage1Proficiency__c</fullName>
        <label>Language1Proficiency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All fluencies</fullName>
                </value>
                <value>
                    <fullName>First Language</fullName>
                </value>
                <value>
                    <fullName>Fluent</fullName>
                </value>
                <value>
                    <fullName>Competent</fullName>
                </value>
                <value>
                    <fullName>Basic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__EFinancialCareersLanguage1__c</fullName>
        <label>Language1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All languages</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Afrikaans</fullName>
                </value>
                <value>
                    <fullName>Albanian</fullName>
                </value>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Armenian</fullName>
                </value>
                <value>
                    <fullName>Bantu</fullName>
                </value>
                <value>
                    <fullName>Basque</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>Berber</fullName>
                </value>
                <value>
                    <fullName>Bulgarian</fullName>
                </value>
                <value>
                    <fullName>Catalan</fullName>
                </value>
                <value>
                    <fullName>Chinese - Mandarin</fullName>
                </value>
                <value>
                    <fullName>Chinese - Cantonese</fullName>
                </value>
                <value>
                    <fullName>Croatian</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>Estonian</fullName>
                </value>
                <value>
                    <fullName>Farsi</fullName>
                </value>
                <value>
                    <fullName>Filipino</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>Galician</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Gujurati</fullName>
                </value>
                <value>
                    <fullName>Hebrew</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>Hungarian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__EFinancialCareersLanguage2Proficiency__c</fullName>
        <label>Language2Proficiency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All fluencies</fullName>
                </value>
                <value>
                    <fullName>First Language</fullName>
                </value>
                <value>
                    <fullName>Fluent</fullName>
                </value>
                <value>
                    <fullName>Competent</fullName>
                </value>
                <value>
                    <fullName>Basic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__EFinancialCareersLanguage2__c</fullName>
        <label>Language2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All languages</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Afrikaans</fullName>
                </value>
                <value>
                    <fullName>Albanian</fullName>
                </value>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Armenian</fullName>
                </value>
                <value>
                    <fullName>Bantu</fullName>
                </value>
                <value>
                    <fullName>Basque</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>Berber</fullName>
                </value>
                <value>
                    <fullName>Bulgarian</fullName>
                </value>
                <value>
                    <fullName>Catalan</fullName>
                </value>
                <value>
                    <fullName>Chinese - Mandarin</fullName>
                </value>
                <value>
                    <fullName>Chinese - Cantonese</fullName>
                </value>
                <value>
                    <fullName>Croatian</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>Estonian</fullName>
                </value>
                <value>
                    <fullName>Farsi</fullName>
                </value>
                <value>
                    <fullName>Filipino</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>Galician</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Gujurati</fullName>
                </value>
                <value>
                    <fullName>Hebrew</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>Hungarian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__EFinancialCareersMaxResults__c</fullName>
        <label>MaxResults</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>200</fullName>
                    <default>true</default>
                    <label>200</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__EFinancialCareersPositionType__c</fullName>
        <label>PositionType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Any</fullName>
                </value>
                <value>
                    <fullName>Permanent</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__EFinancialCareersRadius__c</fullName>
        <label>Radius</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__EFinancialCareersRecency__c</fullName>
        <label>Recency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 day</fullName>
                </value>
                <value>
                    <fullName>2 days</fullName>
                </value>
                <value>
                    <fullName>3 days</fullName>
                </value>
                <value>
                    <fullName>1 week</fullName>
                </value>
                <value>
                    <fullName>2 weeks</fullName>
                </value>
                <value>
                    <fullName>1 month</fullName>
                </value>
                <value>
                    <fullName>3 months</fullName>
                </value>
                <value>
                    <fullName>6 months</fullName>
                </value>
                <value>
                    <fullName>&gt;1 year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__EFinancialCareersWorkExperience__c</fullName>
        <label>WorkExperience</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No exp.</fullName>
                </value>
                <value>
                    <fullName>1-3 yrs</fullName>
                </value>
                <value>
                    <fullName>3-5 yrs</fullName>
                </value>
                <value>
                    <fullName>5-7 yrs</fullName>
                </value>
                <value>
                    <fullName>7-10 yrs</fullName>
                </value>
                <value>
                    <fullName>10-15 yrs</fullName>
                </value>
                <value>
                    <fullName>15+ yrs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__EFinancialCareers__c</fullName>
        <label>Education</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not specified</fullName>
                </value>
                <value>
                    <fullName>High School</fullName>
                </value>
                <value>
                    <fullName>Certificate/Diploma</fullName>
                </value>
                <value>
                    <fullName>Associate Degree</fullName>
                </value>
                <value>
                    <fullName>3 or 4 yr. Undergraduate degree</fullName>
                </value>
                <value>
                    <fullName>Postgraduate Degree</fullName>
                </value>
                <value>
                    <fullName>Postgraduate Degree - MBA</fullName>
                </value>
                <value>
                    <fullName>Postgraduate Degree - Masters</fullName>
                </value>
                <value>
                    <fullName>Postgraduate Degree - JD</fullName>
                </value>
                <value>
                    <fullName>Postgraduate Degree - PhD/Doctorate</fullName>
                </value>
                <value>
                    <fullName>Other Degree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Education__c</fullName>
        <label>Education</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__ExecutivePlacementsAvailability__c</fullName>
        <label>Availability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Immediate</fullName>
                </value>
                <value>
                    <fullName>Two weeks</fullName>
                </value>
                <value>
                    <fullName>One month</fullName>
                </value>
                <value>
                    <fullName>Two months</fullName>
                </value>
                <value>
                    <fullName>Two months+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__ExecutivePlacementsDistance__c</fullName>
        <label>Distance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exact location only</fullName>
                </value>
                <value>
                    <fullName>Within 5 miles</fullName>
                </value>
                <value>
                    <fullName>Within 10 miles</fullName>
                </value>
                <value>
                    <fullName>Within 15 miles</fullName>
                </value>
                <value>
                    <fullName>Within 25 miles</fullName>
                </value>
                <value>
                    <fullName>Within 50 miles</fullName>
                </value>
                <value>
                    <fullName>Within 100 miles</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__ExecutivePlacementsIndustry__c</fullName>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advertising / PR</fullName>
                </value>
                <value>
                    <fullName>Aerospace</fullName>
                </value>
                <value>
                    <fullName>Agricultural</fullName>
                </value>
                <value>
                    <fullName>Automotive,202,Beauty/Luxury</fullName>
                </value>
                <value>
                    <fullName>Biopharma</fullName>
                </value>
                <value>
                    <fullName>Breweries</fullName>
                </value>
                <value>
                    <fullName>Chemical,154_196_212,Clothing/Textiles</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Defense/Security</fullName>
                </value>
                <value>
                    <fullName>Electron/Electric</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Finance,142_157_197,FMCG</fullName>
                </value>
                <value>
                    <fullName>Forestry</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>High tech</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Institutions/Orgs</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Leisure/Hospitality</fullName>
                </value>
                <value>
                    <fullName>Logistics</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Mining</fullName>
                </value>
                <value>
                    <fullName>Petroleum,145_164_200,Pharmaceuticals</fullName>
                </value>
                <value>
                    <fullName>Prof services</fullName>
                </value>
                <value>
                    <fullName>Publications</fullName>
                </value>
                <value>
                    <fullName>Real estate</fullName>
                </value>
                <value>
                    <fullName>Religion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>